add 6th element
add

--- a/Ex_DOM and Events/elabmag_reverce/style.css
+++ b/Ex_DOM and Events/elabmag_reverce/style.css
@@ -26,7 +26,7 @@ tr>td {
     background-color: brown;
 }
 
-.controller>button {
+button {
     display: table-footer-group;
     background-color: black;
     margin: 20px;
